docs: enhance README with detailed technical documentation and technology stack